# proc-macro-workshop

./: .gitignore
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs  main.rs
seq/: Cargo.toml
seq/src/: lib.rs
