[package]
name = "derive_debug"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { features = ["full", "visit", "extra-traits"], version = "1.0.17" }
quote = "1.0.3"
proc-macro2 = "1.0.10"
# TODO
